--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.8",
     "axios": "^0.27.2",
+    "bootstrap": "^4.6.0",
+    "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.0.7",
     "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -21,9 +27,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "dev": "webpack serve",
+     "build": "webpack"
   },
   "eslintConfig": {
     "extends": [
@@ -42,5 +49,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   }
 }
